fix misalignment on gold planner on rosters bigger than 1 - removed fixed 3000px on `.cell-container`

--- a/apps/client/src/app/pages/gold-planner/gold-planner/gold-planner.component.less
+++ b/apps/client/src/app/pages/gold-planner/gold-planner/gold-planner.component.less
@@ -21,7 +21,6 @@
 }
 
 .cell-container {
-  width: 3000px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
